scode/TeamDigital/prob12/error.txt
main.cpp: In function 'int main()':
main.cpp:8:3: error: 'vector' was not declared in this scope
    8 |   vector> board;
      |   ^~~~~~
main.cpp:2:1: note: 'std::vector' is defined in header '<vector>'; did you forget to '#include <vector>'?
    1 | #include<iostream>
  +++ |+#include <vector>
    2 | 
main.cpp:8:11: error: 'board' was not declared in this scope
    8 |   vector> board;
      |           ^~~~~
main.cpp:16:11: error: expected ';' before 'row'
   16 |     vector row;
      |           ^~~~
      |           ;
main.cpp:19:9: error: 'row' was not declared in this scope
   19 |         row.push_back("|_|");
      |         ^~~
main.cpp:21:9: error: 'row' was not declared in this scope
   21 |         row.push_back("_|");
      |         ^~~
main.cpp:23:21: error: 'row' was not declared in this scope
   23 |     board.push_back(row);
      |                     ^~~
